# bdrck

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  _clang-format  rustfmt.toml
bdrck/: Cargo.toml  README.md
bdrck-params/: Cargo.toml
bdrck-params/src/: argument.rs  command.rs  detail.rs  detail_test.rs  help.rs  lib.rs  main_impl.rs  option.rs  option_test.rs  parse_and_execute.rs  parsed_parameters.rs
bdrck-test/: Cargo.toml
bdrck/src/: cli.rs  configuration.rs  error.rs  fs.rs  io.rs  lib.rs  net.rs
bdrck/src/crypto/: compat.rs  digest.rs  key.rs  keystore.rs  mod.rs  secret.rs  util.rs  wrap.rs
bdrck/src/http/: client.rs  recording.rs  types.rs  util.rs
bdrck/src/logging/: mod.rs
bdrck/src/testing/: http.rs  mod.rs  temp.rs
bdrck/src/tests/: cli.rs  configuration.rs  fs.rs  io.rs  mod.rs
bdrck/src/tests/crypto/: key.rs  keystore.rs  mod.rs  secret.rs  wrap.rs
bdrck/src/tests/http/: client.rs  mod.rs  util.rs
bdrck/src/tests/logging/: mod.rs
bdrck/src/tests/testing/: fn_instrumentation.rs  mod.rs  temp.rs
bdrck_config/: Cargo.toml
bdrck_config/src/: configuration.rs  error.rs  generic.rs  lib.rs
bdrck_config/src/tests/: configuration.rs  mod.rs
bdrck_log/: Cargo.toml
bdrck_log/src/: cli.rs  debug.rs  format.rs  lib.rs
bdrck_params/: Cargo.toml
bdrck_params/src/: argument.rs  command.rs  error.rs  help.rs  io.rs  lib.rs  main_impl.rs  option.rs  parse_and_execute.rs  parsed_parameters.rs
bdrck_params/src/tests/: mod.rs  option.rs  parse_and_execute.rs
bdrck_params/tests/: option_test.rs  parse_and_execute_test.rs
bdrck_test/: Cargo.toml
bdrck_test/src/: fn_instrumentation.rs  lib.rs
cpp/: CMakeGraphVizOptions.cmake  LICENSE.md  format.sh
cpp/src/bdrck/json/: CMakeLists.txt  generate.cpp  generate.hpp  parse.hpp
cpp/src/bdrck/process/: CMakeLists.txt  PipeCast.cpp  Process.hpp
cpp/src/bdrck/timer/: CMakeLists.txt  TimerService.hpp
cpp/src/test/: CMakeLists.txt
cpp/src/test-echo/: CMakeLists.txt
flaggy/codegen/: Cargo.toml
flaggy/codegen/src/: lib.rs
flaggy/lib/: Cargo.toml
flaggy/lib/src/: command.rs  error.rs  help.rs  lib.rs  main_impl.rs  parse_and_execute.rs  spec.rs  value.rs
flaggy/lib/src/tests/: codegen.rs  main_impl.rs  mod.rs  parse_and_execute.rs  spec.rs
flaggy/values/: Cargo.toml
flaggy/values/src/: error.rs  lib.rs
halite-sys/: Cargo.toml  README.md
halite-sys/src/: build.rs  lib.rs
src/: cli.rs  configuration.rs  error.rs  fs.rs  lib.rs  net.rs
src/algorithm/: CMakeLists.txt  String.cpp  String.hpp
src/bdrck/algorithm/: String.cpp  String.hpp
src/bdrck/config/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  ConfigurationDefaults.cpp  ConfigurationDefaults.hpp  GenericConfiguration.cpp  Util.cpp  Util.hpp  deserialize.cpp  deserialize.hpp  serialize.cpp  serialize.hpp
src/bdrck/fs/: CMakeLists.txt  ExclusiveFileLock.cpp  ExclusiveFileLock.hpp  Iterator.cpp  Iterator.hpp  TemporaryStorage.cpp  TemporaryStorage.hpp  Util.cpp  Util.hpp
src/bdrck/git/: CMakeLists.txt  Commit.cpp  Commit.hpp  Config.cpp  Config.hpp  Diff.cpp  Diff.hpp  Index.cpp  Index.hpp  Library.cpp  Object.cpp  Object.hpp  Oid.cpp  Oid.hpp  Reference.cpp  Reference.hpp  Repository.hpp  Signature.cpp  Signature.hpp  StrArray.cpp  StrArray.hpp  Tree.cpp  Tree.hpp  Util.cpp  Util.hpp
src/bdrck/json/: CMakeLists.txt  generate.cpp  parse.cpp
src/bdrck/string/: CMakeLists.txt  RegEx.cpp
src/bdrck/util/: Base64.cpp  Base64.hpp  CMakeLists.txt  Error.cpp  Error.hpp  ScopeExit.cpp  UUID.cpp  Windows.cpp  Windows.hpp  floatCompare.hpp
src/crypto/: key.rs  keystore.rs  mod.rs
src/cwrap/: CMakeLists.txt  String.cpp  String.hpp  Unistd.cpp  Unistd.hpp
src/flags/: argument.rs  command.rs  error.rs  help.rs  main_impl.rs  mod.rs  parse_and_execute.rs  parsed_parameters.rs  spec.rs  util.rs  value.rs
src/fs/: CMakeLists.txt  Iterator.cpp  Iterator.hpp  TemporaryStorage.cpp  TemporaryStorage.hpp  Util.cpp  Util.hpp
src/git/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Diff.cpp  Diff.hpp  Library.cpp  Object.cpp  Object.hpp  Repository.cpp  Repository.hpp  Tree.cpp  Tree.hpp  Wrapper.hpp  checkReturn.cpp  checkReturn.hpp
src/http/: client.rs  mod.rs  recording.rs  types.rs  util.rs
src/json/: Types.cpp  Types.hpp  parse.cpp  parse.hpp
src/logging/: cli.rs  debug.rs  mod.rs  write.rs
src/params/: Argument.cpp  Argument.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Option.cpp  Option.hpp  ProgramParameters.hpp  command.rs  help.rs  io.rs  main_impl.rs  mod.rs  option.rs  parseAndExecuteCommand.cpp  parseAndExecuteCommand.hpp  parse_and_execute.rs  parsed_parameters.rs
src/params/detail/: Help.cpp  parseAndExecuteImpl.cpp  parseArguments.cpp  parseArguments.hpp  parseCommand.cpp  parseOptions.cpp  parseOptions.hpp
src/process/: CMakeLists.txt  Process.cpp  Terminal.cpp  Terminal.hpp
src/string/: CMakeLists.txt  RegEx.cpp  RegEx.hpp  StringRef.cpp  StringRef.hpp
src/test/: CMakeLists.txt  bdrck-test.cpp
src/test-echo/: CMakeLists.txt  bdrck-test-echo.cpp
src/test/algorithm/: StringTest.cpp
src/test/config/: ConfigurationTest.cpp  UtilTest.cpp
src/test/fs/: IteratorTest.cpp  TemporaryStorageTest.cpp  UtilTest.cpp
src/test/git/: CommitTest.cpp  IndexTest.cpp  RepositoryTest.cpp  StrArrayTest.cpp
src/test/json/: parseTest.cpp
src/test/params/: OptionTest.cpp
src/test/params/detail/: ParseArgumentsTest.cpp  ParseOptionsTest.cpp
src/test/process/: ProcessTest.cpp
src/test/proto/: TestConfiguration.proto
src/test/timer/: TimerServiceTest.cpp
src/test/util/: Base64Test.cpp  ScopeExitTest.cpp
src/testing/: fn_instrumentation.rs  http.rs  logging.rs  mod.rs  temp.rs
src/tests/: configuration.rs  fs.rs  mod.rs  net.rs
src/util/: CMakeLists.txt  Error.cpp  Error.hpp  UUID.cpp
srv-util/: Cargo.toml
srv-util/src/: db.rs  error.rs  lib.rs  logging.rs  server.rs  signal.rs
srv-util/src/tests/: mod.rs  server.rs
subcrates/flags-codegen/: Cargo.toml
subcrates/flags-codegen/src/: lib.rs
subcrates/flags-values/: Cargo.toml
tools/: coverage.sh
(+88 files in other folders)
