[package]
name = "bdrck"
version = "0.5.3"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Generic common foundational utilities."
homepage = "https://github.com/CmdrMoozy/bdrck"
repository = "https://github.com/CmdrMoozy/bdrck"
license = "Apache-2.0"

[dependencies]
chrono = "0.4"
error-chain = "0.11"
lazy_static = "1.0"
log = { version = "0.4", features = ["std"] }
rand = "0.4"
regex = "0.2"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
