[package]
name = "bdrck"
version = "0.8.0"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Generic common foundational utilities."
homepage = "https://github.com/CmdrMoozy/bdrck"
repository = "https://github.com/CmdrMoozy/bdrck"
license = "Apache-2.0"

[dependencies]
chrono = "0.4"
data-encoding = "2.1"
errno = "0.2"
error-chain = "0.11"
lazy_static = "1.0"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
rand = "0.5"
regex = "1.0"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
sodiumoxide = "0.0.16"
