[package]
name = "bdrck"
version = "0.15.0"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Generic common foundational utilities."
homepage = "https://github.com/CmdrMoozy/bdrck"
repository = "https://github.com/CmdrMoozy/bdrck"
license = "Apache-2.0"
edition = "2018"

[dependencies]
atty = { version = "0.2", optional = true }
chrono = { version = "0.4", optional = true }
data-encoding = { version = "2.1", optional = true }
errno = { version = "0.2", optional = true }
failure = "0.1"
lazy_static = "1.2"
libc = { version = "0.2", optional = true }
log = { version = "0.4", features = ["std"], optional = true }
rand = { version = "0.6", optional = true }
regex = { version = "1.1", optional = true }
reqwest = { version = "0.9", optional = true }
rmp-serde = { version = "0.13", optional = true }
serde = { version = "1.0", optional = true}
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
sodiumoxide = { version = "0.2", optional = true }

[features]
default = ["cli", "configuration", "crypto", "fs", "http", "logging", "net", "testing"]
cli = ["atty", "libc"]
configuration = ["rmp-serde", "serde"]
crypto = ["rmp-serde", "serde", "serde_derive", "sodiumoxide"]
fs = ["errno", "libc", "log"]
http = ["log", "rand", "reqwest", "serde", "serde_derive", "serde_json"]
logging = ["chrono", "log", "regex"]
net = ["data-encoding", "serde"]
testing = ["fs", "http", "log", "logging", "rand", "reqwest", "serde_json"]
