[package]
name = "bdrck"
version = "0.17.1"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Generic common foundational utilities."
homepage = "https://github.com/CmdrMoozy/bdrck"
repository = "https://github.com/CmdrMoozy/bdrck"
license = "Apache-2.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4", optional = true }
data-encoding = { version = "2.3", optional = true }
errno = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }
lazy_static = "1.4"
libc = { version = "0.2", optional = true }
log = { version = "0.4", features = ["std"], optional = true }
rand = { version = "0.7", optional = true }
regex = { version = "1.4", optional = true }
reqwest = { version = "0.10", optional = true }
rmp-serde = { version = "0.14", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true }
sodiumoxide = { version = "0.2", optional = true }
thiserror = "1.0"
url = { version = "2.1", optional = true }

[features]
default = ["cli", "configuration", "crypto", "fs", "http", "io", "logging", "net", "testing"]
cli = ["errno", "libc", "log"]
configuration = ["rmp-serde", "serde"]
crypto = ["data-encoding", "log", "rmp-serde", "serde", "sodiumoxide"]
fs = ["errno", "libc", "log"]
http = ["futures", "log", "rand", "reqwest", "serde", "serde_json", "url"]
io = []
logging = ["chrono", "log", "regex"]
net = ["data-encoding", "serde"]
testing = ["fs", "futures", "http", "log", "logging", "rand", "reqwest", "serde_json", "url"]
