[package]
name = "bdrck"
version = "0.20.1"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Generic common foundational utilities."
homepage = "https://github.com/CmdrMoozy/bdrck"
repository = "https://github.com/CmdrMoozy/bdrck"
license = "Apache-2.0"
edition = "2021"

[dependencies]
data-encoding = { version = "2.3", optional = true }
errno = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
halite-sys = { version = "0.1", optional = true }
libc = { version = "0.2", optional = true }
once_cell = "1.17"
rand = { version = "0.8", optional = true }
reqwest = { version = "0.11", optional = true }
rmp-serde = { version = "1.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
tracing = { version = "0.1", optional = true }
url = { version = "2.3", optional = true }

[features]
default = ["cli", "configuration", "crypto", "fs", "http", "io", "net", "testing"]
cli = ["errno", "libc", "tracing"]
configuration = ["rmp-serde", "serde"]
crypto = ["data-encoding", "libc", "tracing", "rmp-serde", "serde", "halite-sys"]
fs = ["errno", "libc", "tracing"]
http = ["futures", "tracing", "rand", "reqwest", "serde", "serde_json", "url"]
io = []
net = ["data-encoding", "serde"]
testing = ["fs", "futures", "http", "rand", "reqwest", "serde_json", "url"]
