[package]
name = "bdrck_config"
version = "0.1.1"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Application configuration tooling."
homepage = "https://github.com/CmdrMoozy/bdrck/tree/master/bdrck_config"
repository = "https://github.com/CmdrMoozy/bdrck/tree/master/bdrck_config"
license = "MIT"

[dependencies]
backtrace = "0.2"
lazy_static = "0.2"
rmp-serde = "0.10"
serde = "0.8"
serde_derive = "0.8"

[dev-dependencies]
tempfile = "2.1"
