[package]
name = "bdrck_config"
version = "0.1.3"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Application configuration tooling."
homepage = "https://github.com/CmdrMoozy/bdrck/tree/master/bdrck_config"
repository = "https://github.com/CmdrMoozy/bdrck/tree/master/bdrck_config"
license = "Apache-2.0"

[dependencies]
error-chain = "0.11"
lazy_static = "0.2"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
tempfile = "2.2"
