[package]
name = "bdrck_log"
version = "0.3.1"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Utilities for logging."
homepage = "https://github.com/CmdrMoozy/bdrck/tree/master/bdrck_log"
repository = "https://github.com/CmdrMoozy/bdrck/tree/master/bdrck_log"
license = "Apache-2.0"

[dependencies]
log = "0.3"
chrono = "0.3"
