[package]
name = "bdrck_test"
version = "0.1.0"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Utilities for unit tests."
homepage = "https://github.com/CmdrMoozy/bdrck/tree/master/bdrck_test"
repository = "https://github.com/CmdrMoozy/bdrck/tree/master/bdrck_test"
license = "MIT"

[dependencies]
