[package]
name = "halite-sys"
version = "0.1.8"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Unsafe Rust bindings for libsodium stable."
homepage = "https://github.com/CmdrMoozy/bdrck"
repository = "https://github.com/CmdrMoozy/bdrck"
license = "Apache-2.0"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bindgen = "0.68"
tempfile = "3.8"
walkdir = "2.4"
