[package]
name = "srv-util"
version = "0.2.2"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Generic common foundational utilities for HTTP servers."
homepage = "https://github.com/CmdrMoozy/bdrck"
repository = "https://github.com/CmdrMoozy/bdrck"
license = "Apache-2.0"
edition = "2021"

[dependencies]
axum = "0.7"
console-subscriber = { version = "0.2", optional = true }
hyper = "1.0"
hyper-util = "0.1"
libc = "0.2"
rusqlite = { version = "0.30", features = ["bundled-full"] }
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["signal", "sync"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
