[package]
name = "flaggy"
version = "0.2.2"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "A library for parsing command-line flags."
homepage = "https://github.com/CmdrMoozy/bdrck"
repository = "https://github.com/CmdrMoozy/bdrck"
license = "Apache-2.0"
edition = "2021"

[dependencies]
flaggy-codegen = { version = "0.1", path = "../codegen" }
flaggy-values = { version = "0.2", path = "../values" }
thiserror = "1.0"
