[package]
name = "flaggy-values"
version = "0.2.1"
authors = ["Axel Rasmussen <axel.rasmussen1@gmail.com>"]
description = "Types for representing parsed command-line flag values."
homepage = "https://github.com/CmdrMoozy/bdrck"
repository = "https://github.com/CmdrMoozy/bdrck"
license = "Apache-2.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
